--- a/pom.xml
+++ b/pom.xml
@@ -71,6 +71,17 @@
         </plugin>
 			
 		</plugins>
-	</build>
+	</build><distributionManagement>
+<repository>
+<id>nexus</id>
+<name>maven-releases</name>
+<url>http://13.233.58.49:8081/repository/maven-releases/</url>
+</repository>
+<snapshotRepository>
+<id>nexus</id>
+<name>maven-snapshots</name>
+<url>http://13.233.58.49:8081/repository/maven-snapshots/</url>
+</snapshotRepository>
+</distributionManagement>
 
 </project>
